Fill Program Operation Panel via JS

--- a/index.html
+++ b/index.html
@@ -146,55 +146,13 @@
                                     </div>
                                 </div>
                                 <div class="panel-body">
-                                    <div id="list-parent" class="program-operations">
-
-                                        <div class="panel panel-default">
-                                            <div class="panel-heading">
-                                                <div class="panel-title">
-                                                    Integration
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="panel panel-default">
-                                            <div class="panel-heading">
-                                                <div class="panel-title">
-                                                    Simulation
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="panel panel-default">
-                                            <div class="panel-heading">
-                                                <div class="panel-title">
-                                                    Parameter Estimation
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="panel panel-default">
-                                            <div class="panel-heading">
-                                                <div class="panel-title">
-                                                    Objective Test
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="panel panel-default">
-                                            <div class="panel-heading">
-                                                <div class="panel-title">
-                                                    Simulation
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="panel panel-default">
-                                            <div class="panel-heading">
-                                                <div class="panel-title">
-                                                    Derivative Test
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div id="operation-list-parent" class="program-operations">
+                                        <!-- Program Operations -->
                                     </div>
                                     <button id="add-operation-button" type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Operation</button>
 
-                                    <!-- To be inserted when clicking add -->
-                                    <div id="hidden-item" class="panel panel-default" hidden>
+                                    <!-- Program Operation Template -->
+                                    <div id="empty-operation" class="panel panel-default" hidden>
                                         <div class="panel-heading">
                                             <div class="panel-title">
                                                 New Operation
