add css for dropdown-subemenu since bootsrap v3 doe no support it by default add menubar entry for export

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
                               <li><a class="dropdown-item" href="#" id="cut">Ausschneiden</a></li>
                               <li><a class="dropdown-item" href="#" id="copy">Kopieren</a></li>
                               <li><a class="dropdown-item" href="#" id="paste">Einfügen</a></li>
+                              <li class="dropdown-submenu">
+                                    <a class="nav-link dropdown-toggle" href="#" id="valuesDropdown" role="button" data-toggle="dropdown" >Exportiere als</a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                      <li><a class="dropdown-item" href="exportfiles/Daten.xlsx" download>Excel</a></li>
+                                      <li><a class="dropdown-item" href="exportfiles/Daten.csv" download>CSV</a></li>
+                                      <li><a class="dropdown-item" href="exportfiles/Daten.txt" download>TXT</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
