Add fullscreen function

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownView" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ansicht</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownView">
                               <li><a class="dropdown-item" href="#">Immer im Vordergrund </a></li>
-                              <li><a class="dropdown-item" href="#">Vollbild</a></li>
+                              <li><a class="dropdown-item" id="fullscreen-button" href="#">Vollbild</a></li>
                               <li role="separator" class="divider"></li>
                               <li><a class="dropdown-item" href="#">Layout Speichern</a></li>
                               <li><a class="dropdown-item" href="#">Layouts Verwalten</a></li>
