--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">VPLAN</a>
+                        <span class="navbar-brand"><b>VPLAN</b></span>
                     </div>
                     <ul class="nav navbar-nav">
                         <li class="nav-item dropdown">
