Add projectpicker title, fix model browser button styling

--- a/modelbrowser.html
+++ b/modelbrowser.html
@@ -97,9 +97,9 @@
             </div>
             <div class="col-md-5">
                 <div class="actions">
-                    <a href="index.html" type="button" class="btn btn-default btn-success">Projekt erstellen</a>
-                    <a href="index.html" type="button" class="btn btn-default btn-success">Lokales Model öffnen</a>
-                    <a href="index.html" type="button" class="btn btn-default btn-secondary">Abbechen</a>
+                    <a href="index.html" class="btn btn-default btn-success">Projekt erstellen</a>
+                    <a href="index.html" class="btn btn-default btn-success">Lokales Model öffnen</a>
+                    <a href="index.html" class="btn btn-default btn-secondary">Abbechen</a>
                 </div>
             </div>
         </div>
