Use monaco for source code editing, correct typos in source code modal

--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
                                 <div class="panel-heading">
                                     <div class="panel-title">
                                         <h4 data-toggle="tooltip"  data-placement="right" title="Aktionen und deren Reihenfolge festlegen">Aktionen</h4>
-
                                     </div>
                                 </div>
                                 <div class="panel-body">
@@ -165,7 +164,7 @@
                             </div>
                         </div>
 
-                        <!-- To be inserted when clicking add -->
+                        <!-- Panel template -->
                         <div id="hidden-panel" class="panel panel-default" hidden>
                             <div class="panel-heading">
                                 <div class="panel-title">
@@ -219,9 +218,9 @@
                     </div>
 
                         <button id="add-tool"  data-placement="right" title="Das hinzufügen einer Toolbox erlaubt die Kontrolle weiterer Parameter" type="button" class="btn btn-success" data-toggle="modal" data-target="#toolBoxModal">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                        Neues Panel hinzufügen
-                    </button>
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            Neues Panel hinzufügen
+                        </button>
                     </div>
                 </section>
                 <section id="content-right">
@@ -397,83 +396,18 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Toolbox Quelcode Bearbeiten</h4>
+                <h4 class="modal-title">Werkzeug Quellcode Bearbeiten</h4>
               </div>
               <div class="modal-body">
                 <p>
-                    Hier kann der Quelode der Toolbox bearbeitet werden. Dabei wird eine lokale Kopie erstellt, die unter einem neuen Namen veröffentlicht werden kann.<br/>
-                    Die Originale Toolbox wird nicht geändert und ist immer noch möglich sie hinzuzufügen.
+                    Hier kann der Quellcode des Werkzeugs bearbeitet werden. Dabei wird eine lokale Kopie erstellt, die unter einem neuen Namen veröffentlicht werden kann.<br/>
+                    Das originale Werkzeug wird nicht geändert und es ist immer noch möglich, es hinzuzufügen.
                 </p>
                 <div class="form-group">
                   <label for="code">Quellcode Bearbeiten:</label>
-                  <textarea id="code" class="form-control" rows="20">
-from pyjamas.ui.Composite import Composite
-from pyjamas.ui.CheckBox import CheckBox
-from pyjamas.ui.HorizontalPanel import HorizontalPanel
-from pyjamas.ui.VerticalPanel import VerticalPanel
-from pyjamas.ui.Button import Button
-from pyjamas.ui import HasAlignment
+                  <div id="code" style="height: 400px;">
 
-class DayCheckBox(CheckBox):
-
-    def __init__(self, owner, caption, day):
-        CheckBox.__init__(self, caption)
-
-        self.day = day
-        self.addClickListener(owner.dayCheckBoxListener)
-        self.setChecked(owner.calendar.getDayIncluded(day))
-
-
-class DayCheckBoxListener:
-    def __init__(self, calendar):
-        self.calendar = calendar
-
-    def onClick(self, sender):
-        self.calendar.setDayIncluded(sender.day, sender.isChecked())
-
-
-class DayFilterWidget(Composite):
-
-    def __init__(self, calendar):
-        Composite.__init__(self)
-
-        self.calendar = calendar
-        self.dayCheckBoxListener = DayCheckBoxListener(calendar)
-        self.outer = VerticalPanel()
-        self.initWidget(self.outer)
-        self.setStyleName("DynaTable-DayFilterWidget")
-        self.outer.add(DayCheckBox(self, "Sunday", 0))
-        self.outer.add(DayCheckBox(self, "Monday", 1))
-        self.outer.add(DayCheckBox(self, "Tuesday", 2))
-        self.outer.add(DayCheckBox(self, "Wednesday", 3))
-        self.outer.add(DayCheckBox(self, "Thursday", 4))
-        self.outer.add(DayCheckBox(self, "Friday", 5))
-        self.outer.add(DayCheckBox(self, "Saturday", 6))
-
-        self.buttonAll = Button("All", self)
-        self.buttonNone = Button("None", self)
-
-        hp = HorizontalPanel()
-        hp.setHorizontalAlignment(HasAlignment.ALIGN_CENTER)
-        hp.add(self.buttonAll)
-        hp.add(self.buttonNone)
-
-        self.outer.add(hp)
-        self.outer.setCellVerticalAlignment(hp, HasAlignment.ALIGN_BOTTOM)
-        self.outer.setCellHorizontalAlignment(hp, HasAlignment.ALIGN_CENTER)
-
-    def setAllCheckBoxes(self, checked):
-        for widget in self.outer:
-            if hasattr(widget, "setChecked"):
-                widget.setChecked(checked)
-                self.dayCheckBoxListener.onClick(widget)
-
-    def onClick(self, sender):
-        if self.buttonAll == sender:
-            self.setAllCheckBoxes(True)
-        elif self.buttonNone == sender:
-            self.setAllCheckBoxes(False)
-                  </textarea>
+                  </div>
                 </div>
               </div>
               <div class="modal-footer">
