add function to export button in output menu

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                             <li>
                                 <a class="nav-link dropdown-toggle" href="#" id="valuesDropdown" role="button" data-toggle="dropdown" ><span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span></a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownEdit">
-                                    <li><a class="dropdown-item" href="#" id="paste"><input type="checkbox">&nbsp Automatisch ausführen</input></a></li>
-                                    <li><a class="dropdown-item" href="#" id="paste">Dateien Im Explorer Öffnen</a></li>
+                                    <li><a class="dropdown-item" href="#" id="paste"><input type="checkbox" id="autorun"><label style="font-weight:normal !important;" for="autorun">&nbsp Automatisch Ausführen</label></input></a></li>
+                                    <li><a class="dropdown-item" href="#" id="paste"><input type="file" id="files" class="hidden"/><label style="font-weight:normal !important;" for="files">Dateien im Explorer Öffnen</label></a></li>
                                     <li class="dropdown-submenu">
                                         <a class="nav-link dropdown-toggle" href="#" id="valuesDropdown" role="button" data-toggle="dropdown" >Exportiere als</a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
