Added Brief Model description over Experiment tree.
Redesigned Project creation screen. Still got problem with style of Model browser popup.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,13 @@
                 <section id="content-left">
                     <header>
                         <h1>Experimente</h1>
-                    </header>
+                    </header> 
                     <div class="section-content">
+                    	<div class="content">
+                    		<h3>Synthese Strontium Selenate</h2>
+                    		<p>Author: Heisenberg</p>
+                    		<p>Das Experiment befasst sich mit der optimalen Herstellung möglichst reines Strontium Selenats</p>
+                    	</div>
                         <div id="experiment-browser"></div>
                     </div>
 
@@ -221,7 +226,7 @@
                         <button id="add-tool"  data-placement="right" title="Das hinzufügen einer Toolbox erlaubt die Kontrolle weiterer Parameter" type="button" class="btn btn-success" data-toggle="modal" data-target="#toolBoxModal">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                         Neues Panel hinzufügen
-                    </button>
+                    	</button>
                     </div>
                 </section>
                 <section id="content-right">
