Fixed model browser popup

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <h1>Experimente</h1>
                     </header> 
                     <div class="section-content">
-                    	<div class="content">
+                    	<div>
                     		<h3>Synthese Strontium Selenate</h2>
                     		<p>Author: Heisenberg</p>
                     		<p>Das Experiment befasst sich mit der optimalen Herstellung möglichst reines Strontium Selenats</p>
