--- a/modelbrowser.html
+++ b/modelbrowser.html
@@ -14,7 +14,7 @@
 <body>
     <div class="modelbrowser container">
         <h1>
-            Neues Projekt für ein existierendes Model erstellen
+            Neues Projekt
         </h1>
 
         <div class="form-group">
@@ -32,7 +32,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" id="modell-name" value="Amoniak Synthese" disabled="true">
                 <span class="input-group-btn">
-                    <button id="add-tool"  data-placement="right" title="Das hinzufügen einer Toolbox erlaubt die Kontrolle weiterer Parameter" type="button" class="btn btn-success" data-toggle="modal" data-target="#model-browser">Select Model</button>
+                    <button id="add-tool"  data-placement="right" title="Das hinzufügen einer Toolbox erlaubt die Kontrolle weiterer Parameter" type="button" class="btn btn-success" data-toggle="modal" data-target="#model-browser">Modell Auswählen</button>
                 </span>
             </div>
         </div>
@@ -44,90 +44,94 @@
         </div>
     </div>
     <div id="model-browser" class="modal fade">
-        <div class="modelbrowser container" role="dialog" >
-            <div class="row vertical-align">
-                <div class="col-md-6">
-                    <h1>
-                        Modelle
-                    </h1>
-                </div>
-                <div class="col-md-3">
-                    <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownCategory" data-toggle="dropdown" aria-haspopup="true">
-                            All Kategorien
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#">Krankheiten</a></li>
-                            <li><a href="#">Reaktionen</a></li>
-                            <li><a href="#">Therapie</a></li>
-                        </ul>
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modelbrowser container">
+                    <div class="row vertical-align">
+                        <div class="col-md-5">
+                            <h1>
+                                Modelle
+                            </h1>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownCategory" data-toggle="dropdown" aria-haspopup="true">
+                                    All Kategorien
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Krankheiten</a></li>
+                                    <li><a href="#">Reaktionen</a></li>
+                                    <li><a href="#">Therapie</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button">Go</button>
+                                  </span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Go</button>
-                          </span>
+                    <div class="row my-row my-content">
+                        <div id="left" class="col-md-4">
+                            <table class="model-table table table-hover table-striped">
+                                <thead>
+                                    <th>Modell</th>
+                                    <th>Author</th>
+                                    <th>Downloads</th>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Kuchen</td>
+                                        <td>Aperture Laboratories</td>
+                                        <td>10815</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Strontium Selenate Synthese</td>
+                                        <td>John</td>
+                                        <td>851</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Lemon</td>
+                                        <td>GLaDOS</td>
+                                        <td>105</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Cores</td>
+                                        <td>Cave Johnson</td>
+                                        <td>58</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Potato</td>
+                                        <td>Gordon Freeman</td>
+                                        <td>5</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div id="right" class="description col-md-4">
+                            <div id="heading">
+                                <h2 id="model-title">Modell</h2> von <span id="model-author">Author</span>
+                            </div>
+                            <div id="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis ligula dui, eu dictum mi aliquam nec. Pellentesque tempor placerat nulla, aliquet condimentum dolor sodales eget. Quisque sagittis ipsum ac erat finibus tincidunt. Suspendisse elementum, ex ac pretium tincidunt, leo erat euismod neque, vitae volutpat nulla justo ac ipsum. Etiam ornare tellus sed sapien efficitur rutrum. Pellentesque ut magna pretium, ultricies lectus ut, viverra ipsum. Cras mi leo, faucibus at erat non, lacinia gravida orci. Proin erat lacus, pulvinar eget scelerisque vitae, convallis vel odio.</p>
+                                <p>Proin molestie luctus ante, vel efficitur dolor. Morbi pretium lectus lacus. Curabitur tempus, massa nec ornare iaculis, nunc turpis cursus arcu, a vestibulum velit lectus maximus nunc. Integer non suscipit mauris, sit amet lacinia lacus. Vivamus hendrerit libero metus, fringilla porttitor diam efficitur vulputate. Sed at lacus metus. Pellentesque sit amet odio erat. Ut viverra tellus sed commodo congue. Morbi consectetur sollicitudin justo sed blandit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec porta purus ac ultrices feugiat. Vestibulum eu massa blandit, finibus massa vitae, semper dolor. Etiam tellus dui, efficitur sed sagittis eget, posuere non nibh. Nunc ac sem orci.</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="row my-row my-content">
-                <div id="left" class="col-md-6">
-                    <table class="model-table table table-hover table-striped">
-                        <thead>
-                            <th>Model</th>
-                            <th>Author</th>
-                            <th>Downloads</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Cake</td>
-                                <td>Aperture Laboratories</td>
-                                <td>10815</td>
-                            </tr>
-                            <tr>
-                                <td>Strontium Selenate Synthesis</td>
-                                <td>John</td>
-                                <td>851</td>
-                            </tr>
-                            <tr>
-                                <td>Lemon</td>
-                                <td>GLaDOS</td>
-                                <td>105</td>
-                            </tr>
-                            <tr>
-                                <td>Cores</td>
-                                <td>Cave Johnson</td>
-                                <td>58</td>
-                            </tr>
-                            <tr>
-                                <td>Potato</td>
-                                <td>Gordon Freeman</td>
-                                <td>5</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div id="right" class="description col-md-6">
-                    <div id="heading">
-                        <h2 id="model-title">Model</h2> by <span id="model-author">Author</span>
-                    </div>
-                    <div id="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis ligula dui, eu dictum mi aliquam nec. Pellentesque tempor placerat nulla, aliquet condimentum dolor sodales eget. Quisque sagittis ipsum ac erat finibus tincidunt. Suspendisse elementum, ex ac pretium tincidunt, leo erat euismod neque, vitae volutpat nulla justo ac ipsum. Etiam ornare tellus sed sapien efficitur rutrum. Pellentesque ut magna pretium, ultricies lectus ut, viverra ipsum. Cras mi leo, faucibus at erat non, lacinia gravida orci. Proin erat lacus, pulvinar eget scelerisque vitae, convallis vel odio.</p>
-                        <p>Proin molestie luctus ante, vel efficitur dolor. Morbi pretium lectus lacus. Curabitur tempus, massa nec ornare iaculis, nunc turpis cursus arcu, a vestibulum velit lectus maximus nunc. Integer non suscipit mauris, sit amet lacinia lacus. Vivamus hendrerit libero metus, fringilla porttitor diam efficitur vulputate. Sed at lacus metus. Pellentesque sit amet odio erat. Ut viverra tellus sed commodo congue. Morbi consectetur sollicitudin justo sed blandit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec porta purus ac ultrices feugiat. Vestibulum eu massa blandit, finibus massa vitae, semper dolor. Etiam tellus dui, efficitur sed sagittis eget, posuere non nibh. Nunc ac sem orci.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row vertical-align">
-                <div class="col-md-9">
+                    <div class="row vertical-align">
+                        <div class="col-md-4">
 
-                </div>
-                <div class="col-md-5">
-                    <div class="actions">
-                        <a data-dismiss="modal" class="btn btn-default btn-success">Auswählen</a>
-                        <a data-dismiss="modal" class="btn btn-default btn-secondary">Abbechen</a>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="actions">
+                                <a data-dismiss="modal" class="btn btn-default btn-success">Auswählen</a>
+                                <a data-dismiss="modal" class="btn btn-default btn-secondary">Abbechen</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
