--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     	<div>
                     		<h3>Synthese Strontium Selenate</h2>
                     		<p>Author: Heisenberg</p>
-                    		<p>Das Experiment befasst sich mit der optimalen Herstellung möglichst reines Strontium Selenats</p>
+                    		<p>Das Modell befasst sich mit der optimalen Herstellung möglichst reines Strontium Selenats</p>
                     	</div>
                         <div id="experiment-browser"></div>
                     </div>
