--- a/modelbrowser.html
+++ b/modelbrowser.html
@@ -80,7 +80,7 @@
                             <table class="model-table table table-hover table-striped">
                                 <thead>
                                     <th>Modell</th>
-                                    <th>Author</th>
+                                    <th>Autor</th>
                                     <th>Downloads</th>
                                 </thead>
                                 <tbody>
@@ -114,7 +114,7 @@
                         </div>
                         <div id="right" class="description col-md-4">
                             <div id="heading">
-                                <h2 id="model-title">Modell</h2> von <span id="model-author">Author</span>
+                                <h2 id="model-title">Modell</h2> von <span id="model-author">Autor</span>
                             </div>
                             <div id="content">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis ligula dui, eu dictum mi aliquam nec. Pellentesque tempor placerat nulla, aliquet condimentum dolor sodales eget. Quisque sagittis ipsum ac erat finibus tincidunt. Suspendisse elementum, ex ac pretium tincidunt, leo erat euismod neque, vitae volutpat nulla justo ac ipsum. Etiam ornare tellus sed sapien efficitur rutrum. Pellentesque ut magna pretium, ultricies lectus ut, viverra ipsum. Cras mi leo, faucibus at erat non, lacinia gravida orci. Proin erat lacus, pulvinar eget scelerisque vitae, convallis vel odio.</p>
