--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4 data-toggle="tooltip"  data-placement="right" title="Selten benutzte Optionen, für die keine Toolbox existiert">Optionen</h4>
+                                        <h4 data-toggle="tooltip"  data-placement="right" title="Erlaubt es Einstellungen zu treffen, für die keine Toolbox existiert">vplan.ini</h4>
                                     </div>
                                 </div>
                                 <div class="panel-body" style="height: 300px;">
