--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="section-content">
                     	<div>
                     		<h3>Synthese Strontium Selenate</h2>
-                    		<p>Author: Heisenberg</p>
+                    		<p>Autor: Heisenberg</p>
                     		<p>Das Modell befasst sich mit der optimalen Herstellung möglichst reines Strontium Selenats</p>
                     	</div>
                         <div id="experiment-browser"></div>
