--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                               <li><a class="dropdown-item" href="modelbrowser.html">Öffnen</a></li>
                               <li><a class="dropdown-item" href="#">Importieren</a></li>
                               <li role="separator" class="divider"></li>
-                              <li><a class="dropdown-item" href="#">Speichern</a></li>
+                              <li><a class="dropdown-item" href="#">Schließen</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -41,32 +41,48 @@
                               <li><a class="dropdown-item" href="#" id="delete">Löschen</a></li>
                               <li><a class="dropdown-item" href="#" id="clone">Duplizieren</a></li>
                               <li role="separator" class="divider"></li>
-                              <li><a class="dropdown-item" href="#" id="cut">Ausschneiden</a></li>
-                              <li><a class="dropdown-item" href="#" id="copy">Kopieren</a></li>
-                              <li><a class="dropdown-item" href="#" id="paste">Einfügen</a></li>
                               <li class="dropdown-submenu">
-                                    <a class="nav-link dropdown-toggle" href="#" id="valuesDropdown" role="button" data-toggle="dropdown" >Exportiere als</a>
+                                    <a class="nav-link dropdown-toggle" href="#" id="valuesDropdown" role="button" data-toggle="dropdown" >Bearbeiten</a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                      <li><a class="dropdown-item" href="exportfiles/Daten.xlsx" download>Excel</a></li>
-                                      <li><a class="dropdown-item" href="exportfiles/Daten.csv" download>CSV</a></li>
-                                      <li><a class="dropdown-item" href="exportfiles/Daten.txt" download>TXT</a></li>
+                                            <li><a class="dropdown-item" href="#" id="cut">Ausschneiden</a></li>
+                                            <li><a class="dropdown-item" href="#" id="copy">Kopieren</a></li>
+                                            <li><a class="dropdown-item" href="#" id="paste">Einfügen</a></li>
                                     </ul>
                                 </li>
                             </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Werkzeuge</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Layout Speichern</a></li>
+                                    <li><a class="dropdown-item" href="#">Layouts Verwalten</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a class="dropdown-item" href="#">Alle Werkzeuge Schließen</a></li>
+                                    <li><a class="dropdown-item" href="#">Werkzeug Hinzufügen</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a class="dropdown-item" href="#">Layout Zurücksetzten</a></li>
+                                </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ausgaben</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li><a class="dropdown-item" href="#" id="paste"><input type="checkbox" id="autorun"><label style="font-weight:normal !important;" for="autorun">&nbsp Automatisch Ausführen</label></input></a></li>
+                                        <li><a class="dropdown-item" href="#" id="paste"><input type="file" id="files" class="hidden"/><label style="font-weight:normal !important;" for="files">Dateien im Explorer Öffnen</label></a></li>
+                                        <li class="dropdown-submenu">
+                                            <a class="nav-link dropdown-toggle" href="#" id="valuesDropdown" role="button" data-toggle="dropdown" >Exportiere als</a>
+                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <li><a class="dropdown-item" href="exportfiles/Daten.xlsx" download>Excel</a></li>
+                                                <li><a class="dropdown-item" href="exportfiles/Daten.csv" download>CSV</a></li>
+                                                <li><a class="dropdown-item" href="exportfiles/Daten.txt" download>TXT</a></li>
+                                            </ul>
+                                        </li>
+                                </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownView" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ansicht</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownView">
                               <li><a class="dropdown-item" href="#">Immer im Vordergrund </a></li>
                               <li><a class="dropdown-item" id="fullscreen-button" href="#">Vollbild</a></li>
-                              <li role="separator" class="divider"></li>
-                              <li><a class="dropdown-item" href="#">Layout Speichern</a></li>
-                              <li><a class="dropdown-item" href="#">Layouts Verwalten</a></li>
-                              <li role="separator" class="divider"></li>
-                              <li><a class="dropdown-item" href="#">Alle Panels Schließen</a></li>
-                              <li><a class="dropdown-item" href="#">Panel Hinzufügen</a></li>
-                              <li role="separator" class="divider"></li>
-                              <li><a class="dropdown-item" href="#">Layout Zurücksetzten</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
