Add horizontal divider

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     		<p>Autor: Heisenberg</p>
                     		<p>Das Modell befasst sich mit der optimalen Herstellung möglichst reines Strontium Selenats</p>
                     	</div>
-                        <div id="experiment-browser"></div>
+                      <hr style="width: 100%; color: black; height: 1px; background-color:black;" />
+                      <div id="experiment-browser"></div>
                     </div>
 
                 </section>
