--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <span class="navbar-brand"><b>VPLAN</b></span>
+                        <span class="navbar-brand noselect"><b>VPLAN</b></span>
                     </div>
                     <ul class="nav navbar-nav">
                         <li class="nav-item dropdown">
@@ -98,7 +98,7 @@
             <div class="my-row my-content">
                 <section id="content-left">
                     <header>
-                        <h1>Experimente</h1>
+                        <h1 class="noselect">Experimente</h1>
                     </header> 
                     <div class="section-content">
                     	<div>
@@ -113,7 +113,7 @@
                 </section>
                 <section id="content-center">
                     <header>
-                        <h1>Werkzeuge</h1>
+                        <h1 class="noselect">Werkzeuge</h1>
                     </header>
                     <div class="section-content">
                         <div id="panel-parent" class="content">
@@ -247,7 +247,7 @@
                 </section>
                 <section id="content-right">
                     <header>
-                        <h1>Ausgaben</h1>
+                        <h1 class="noselect">Ausgaben</h1>
                     </header>
 
                     <div class="section-content">
@@ -359,7 +359,7 @@
                     <div class="row my-row my-content">
                         <div id="left" class="col-md-4">
                             <table class="model-table table table-hover table-striped">
-                                <thead>
+                                <thead class="noselect">
                                     <th>Modell</th>
                                     <th>Autor</th>
                                     <th>Downloads</th>
